# Assistive-Device-Design

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GAITSIM_ASSIST_SUMMARY.md  LICENSE  MANIFEST.in  README.md  environment.yml  install.bat  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
cost_function_sensitivity_results/PredictiveSimulationsNoAssistance/: Predictive_NoAssistance_P1_GRF.sto  Predictive_NoAssistance_P1_states.sto  Predictive_NoAssistance_P2_GRF.sto  Predictive_NoAssistance_P2_states.sto  Predictive_NoAssistance_P3_GRF.sto  Predictive_NoAssistance_P3_states.sto  Predictive_NoAssistance_P4_GRF.sto  Predictive_NoAssistance_P4_states.sto  Predictive_NoAssistance_P5_GRF.sto  Predictive_NoAssistance_P5_states.sto  Predictive_NoAssistance_P6_GRF.sto  Predictive_NoAssistance_P6_states.sto
cost_function_sensitivity_results/PredictiveSimulationsWithAnkleAssistance/: Predictive_AnkleAssistance_P1_GRF.sto  Predictive_AnkleAssistance_P1_states.sto  Predictive_AnkleAssistance_P2_GRF.sto  Predictive_AnkleAssistance_P2_states.sto  Predictive_AnkleAssistance_P3_GRF.sto  (+7 more)
cost_functions/: __init__.py  cot.py  fatigue.py  head_motion.py  hybrid.py  joint_torque.py  muscle_effort.py
docs/: index.rst  installation.rst  paper_links.md
examples/: README.md  analyze_opensim_results.py  assistive_device_optimization.py  basic_simulation.py  basic_simulation_moco.py  batch_processing.py  compare_cost_functions.py  custom_cost_function.py
gaitsim_assist/: __init__.py
gaitsim_assist/data/: README.md
reference_data/: reference_gait.mat
results/: synthetic_gait_data.csv
sims/: 01_tracking.py  02_predictive_unassisted.py  03_predictive_assisted.py  compare_gait_analyses.py  experimental_gait_analysis.py  synthetic_gait.py  utilities.py  walking_2d.py
tests/: test_basic.py  test_gradients.py  test_walking_2d.py
(+67 files in other folders)
