[metadata]
name = gaitsim_assist
version = 0.1.0
description = A Python library for gait simulations and assistive device design
long_description = file: README.md
long_description_content_type = text/markdown
author = Assistive Device Design Team
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.20.0
    matplotlib>=3.3.0
    pandas>=1.2.0
    scipy>=1.6.0
    seaborn>=0.11.0
    casadi>=3.5.5

[options.extras_require]
dev =
    pytest>=6.0.0
    black
    flake8
    sphinx
    sphinx_rtd_theme

[options.package_data]
gaitsim_assist =
    models/*.osim
    data/*.csv
    data/*.json

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv 